k8s/04-keycloak.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: jira-clone
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:24.0.1
          # Uses MySQL as backend so realm data persists across pod restarts
          # args (not command) so we pass to Keycloak's ENTRYPOINT (/opt/keycloak/bin/kc.sh)
          args:
            - start-dev
            - --db=mysql
            - --db-url=jdbc:mysql://mysql:3306/keycloak
            - --db-username=root
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /realms/master
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 15
            failureThreshold: 10

---

apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: jira-clone
spec:
  selector:
    app: keycloak
  ports:
    - name: http
      port: 8080
      targetPort: 8080
